// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogActions组件 快照测试 基本使用 1`] = `
<div
  className="sc-bdnylx bPvROX sinoui-dialog-actions"
>
  <button
    className="sc-gtssRu bWEvxX sinoui-base-button sc-dlnjPT iXICCU sinoui-button"
    color="primary"
    role="button"
    type="button"
  >
    Disagree
  </button>
  <button
    className="sc-gtssRu bWEvxX sinoui-base-button sc-dlnjPT iXICCU sinoui-button"
    color="primary"
    role="button"
    type="button"
  >
    Agree
  </button>
</div>
`;

exports[`DialogActions组件 快照测试 按钮垂直显示 1`] = `
<div
  className="sc-bdnylx gWnnYe sinoui-dialog-actions"
>
  <button
    className="sc-gtssRu bWEvxX sinoui-base-button sc-dlnjPT iXICCU sinoui-button"
    color="primary"
    role="button"
    type="button"
  >
    Disagree
  </button>
  <button
    className="sc-gtssRu bWEvxX sinoui-base-button sc-dlnjPT iXICCU sinoui-button"
    color="primary"
    role="button"
    type="button"
  >
    Agree
  </button>
</div>
`;
